# task3

./: .gitignore  AnalyzerFacade.cpp  AnalyzerFacade.h  CMakeLists.txt  FileAnalyzer.cpp  FileAnalyzer.h  FileCollector.cpp  FileCollector.h  JoinThreads.cpp  JoinThreads.h  JsonParser.cpp  JsonParser.h  SyncQueue.cpp  SyncQueue.h  ThreadPool.cpp  ThreadPool.h  Wrapper.cpp  Wrapper.h  main.cpp  utils.cpp  utils.h
test_files/: test1.cpp
test_files/inside_folder/: test2.cpp
test_files/inside_folder/inside_folder/: test3.cpp
tests/: tests.cpp
